--- a/ShoppingList.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ShoppingList.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -13,13 +13,11 @@ else
     {
     @Html.AntiForgeryToken()
     <fieldset id="socialLoginList">
-        <legend>Log in using another service</legend>
-        <p>
+        <legend>Log in using</legend>
         @foreach (AuthenticationClientData p in Model)
         {
             <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
         }
-        </p>
     </fieldset>
     }
 }
