--- a/ShoppingList.Web/Views/Home/Index.cshtml
+++ b/ShoppingList.Web/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Shopping List";
 }
 
+@section scripts{
+    @Scripts.Render("~/js/app")
+}
+
 <div class="container app" style="display: none;" data-bind="visible: initialized">
 
     <div class="navbar navbar-fixed-top">
@@ -34,6 +38,7 @@
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
+                <a href="#" class="btn pull-right hidden-phone" data-toggle="modal" data-target="#userDetails"><i class="icon-user"></i></a>
             </div>
         </div>
     </div>
@@ -119,6 +124,20 @@
         </form>
         <div class="modal-footer">
             <a href="#" class="btn" data-bind="click: $root.stopEditingActive">Back</a>
+        </div>
+    </article>
+
+    <article id="userDetails" class="modal hide fade">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h3>User details</h3>
+        </div>
+        <div class="modal-body">
+            <p>@User.Identity.Name</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#" data-dismiss="modal" class="btn">Close</a>
+            @*<a href="#" class="btn btn-primary">Save changes</a>*@
         </div>
     </article>
 </div>
